<resources>
    <string name="app_name">IziEnglish</string>

    <string-array name="array_question_titles">
        <item>Question 1-20</item>
        <item>Question 21-40</item>
        <item>Question 41-60</item>
        <item>Question 61-80</item>
        <item>Question 81-100</item>
    </string-array>

    <string-array name="array_quiz_quantities">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="array_grammar_titles">
        <item>INTRODUCTION</item>
        <item>NOUN</item>
        <item>PRONOUN</item>
        <item>ADJECTIVE</item>
        <item>VERB</item>
        <item>ADVERB</item>
        <item>PREPOSITION</item>
    </string-array>

    <string-array name="array_grammar_url">
        <item>file:///android_asset/grammar/introduction.html</item>
        <item>file:///android_asset/grammar/noun.html</item>
        <item>file:///android_asset/grammar/pronoun.html</item>
        <item>file:///android_asset/grammar/adjective.html</item>
        <item>file:///android_asset/grammar/verb.html</item>
        <item>file:///android_asset/grammar/adverb.html</item>
        <item>file:///android_asset/grammar/preposition.html</item>
    </string-array>

    <string name="quiz_btnFinish">Finish</string>
    <string name="quiz_btnNext">Next</string>
    <string name="quiz_btnBack">Back</string>
    <string name="example_for_verb1">Mary will awake in an hour because she has to go to work.</string>
    <string name="example_for_verb2">I awoke in the middle of the night when I heard that noise.</string>
    <string name="example_for_verb3">The patient has awoken from a two-week coma.</string>
    <string name="Intro_activity_btnLogin">Start</string>
    <string name="AnswerQuiz_frag_btn">Finish</string>
    <string name="resultFragBtn">Review</string>
    <string name="verb_frag_title_verb1">INFINITIVE</string>
    <string name="verb_frag_title_verb2">PAST SIMP.</string>
    <string name="verb_frag_title_verb3">PAST PART.</string>
    <string name="verb_frag_title_edHint">Search Word</string>
    <string name="share_frag_tv_notify">Notification</string>
    <string name="share_frag_btn">Open Play Store</string>
    <string name="custom_verb_slash">|</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
