<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.izienglish.Fragment.VerbFragment">

    <EditText
        android:gravity="center"
        android:hint="@string/verb_frag_title_edHint"
        android:id="@+id/edSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="@dimen/verb_frag_layoutMarginTop"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edSearch"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvVerb1"
            style="@style/verb_frag_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verb_frag_title_verb1" />

        <TextView
            android:id="@+id/tvVerb2"
            style="@style/verb_frag_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verb_frag_title_verb2" />

        <TextView
            android:id="@+id/tvVerb3"
            style="@style/verb_frag_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verb_frag_title_verb3" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout"
        android:clickable="true" />
</RelativeLayout>
