<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.administrator.izienglish.QuizActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="@dimen/quiz_activity_ViewPagerHeight"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPrevious"
            style="@style/quiz_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_btnBack" />

        <Button
            android:id="@+id/btnFinish"
            style="@style/quiz_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_btnFinish" />

        <Button
            android:id="@+id/btnNext"
            style="@style/quiz_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_btnNext" />
    </LinearLayout>
</RelativeLayout>
